# android-dev-guard-sdk

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MAVEN_CENTRAL_SETUP.md  README.md  build.gradle.kts  gradle-publish.local.properties.example  gradle-publish.properties.example  gradle.properties  settings.gradle.kts  signing-keys.properties
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  devguard_bridge.cpp  devguard_core.c  devguard_core.h
core/src/main/java/io/devguard/core/: NativeBridge.kt  StatusUrlResolver.kt
crash-reporter/: build.gradle.kts
crash-reporter/src/main/java/io/devguard/crash/: PluginCrashReporter.kt  SdkIdentity.kt
scripts/: setup-gradle-publish-props.sh
sdk/: build.gradle.kts
sdk/src/main/java/io/devguard/: DevGuard.kt
sdk/src/main/java/io/devguard/core/: DevGuardConstants.kt
sdk/src/main/java/io/devguard/models/: Models.kt
sdk/src/main/java/io/devguard/services/: CacheService.kt  DeviceTokenService.kt  HardwareService.kt  RestClient.kt  SecureStorageService.kt  UsageLogger.kt
sdk/src/main/java/io/devguard/ui/: DevGuardShield.kt  PremiumLockView.kt
sdk/src/main/java/io/devguard/ui/branding/: BrandingHelpers.kt
